--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcsh 'Biographical fiction'
 - !lcc 'PT'
 - !lcsh 'Denmark -- History -- 17th century -- Fiction'
+- GITenberg
 title: 'Fru Marie Grubbe: Interieurer fra det syttende Aarhundrede'
 url: http://www.gutenberg.org/ebooks/44275
